force-app/main/default/objects/STM_Relocation_Delete__e/STM_Relocation_Delete__e.object-meta.xml
<CustomObject>
    <label>STM Relocation - Delete</label>
    <pluralLabel>STM Relocation - Delete</pluralLabel>
</CustomObject>