force-app/main/default/objects/STM_Relocation_Delete__e/fields/Service_Resource_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource_Id__c</fullName>
    <label>Service Resource Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>