force-app/main/default/objects/STM_Relocation_Delete__e/fields/Service_Territory_Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory_Member_Id__c</fullName>
    <label>Service Territory Member Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>